...
                android:textSize="15dp"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="current status"
                android:id="@+id/status"
                android:textSize="15dp"
                android:textColor="#000000"
                android:background="@color/lightGreen" />
            </TableRow>

        <TableRow
...
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:id="@+id/est_price"
                android:textSize="15dp"
                android:textColor="#000000"/>
            </TableRow>

        <TableRow
            android:layout_width="match_parent"
...
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/biddingDriversListView">

        </ListView>
    </LinearLayout>

    </ScrollView>

...
            android:layout_height="@dimen/large_button_box">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Cancel"
            android:id="@+id/cancel_request_button"
            android:layout_column="0"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/button_text"
            android:layout_margin="5dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Confirm"
            android:id="@+id/accept_pending_button"
            android:layout_column="1"
            android:background="@color/colorGreen"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/button_text"
            android:layout_margin="5dp" />

            <Button
                android:text="Complete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/ride_complete_button"
                android:textAlignment="viewStart"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/button_text"
                android:layout_column="2"
                android:layout_margin="5dp" />
...
