...


    <Button
        android:text="@string/confirm_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_button_box"
        android:id="@+id/request_done_button"
        android:textSize="@dimen/button_text"
        style="@style/Widget.AppCompat.Button"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorWhite"
...

            <EditText
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:hint="1 Sir Winston Churchill SQ"
                android:ems="10"
                android:id="@+id/start_input_1"
                android:layout_height="35dp"
                android:background="@color/colorHighlight"
                android:layout_marginRight="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
        </TableRow>
...

            <EditText
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:hint="Edmonton"
                android:ems="10"
                android:id="@+id/start_input_2"
                android:layout_height="35dp"
                android:background="@color/colorHighlight"
                android:layout_marginRight="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
        </TableRow>
...

            <EditText
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:hint="1 Sir Winston Churchill SQ"
                android:ems="10"
                android:id="@+id/end_input_1"
                android:layout_height="35dp"
                android:background="@color/colorHighlight"
                android:layout_marginRight="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
        </TableRow>
...

            <EditText
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:hint="Edmonton"
                android:ems="10"
                android:id="@+id/end_input_2"
                android:layout_height="35dp"
                android:background="@color/colorHighlight"
                android:layout_marginRight="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
        </TableRow>
...
