...
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/main_text"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="@dimen/list_type_button"
            android:background="@color/colorPrimary"
            android:id="@+id/button_requested" />

        <Button
            android:text="@string/list_pending"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/main_text"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="@dimen/list_type_button"
            android:background="@color/colorPrimary"
            android:id="@+id/button_pending" />

        <Button
            android:text="@string/list_accepted"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/main_text"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="@dimen/list_type_button"
            android:background="@color/colorPrimary"
            android:id="@+id/button_accepted" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_container"
...

        <Button
            android:text="@string/home_request"
            android:layout_width="match_parent"
            android:textSize="@dimen/button_text"
            android:layout_height="@dimen/large_button_box"
            android:id="@+id/request_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_gravity="bottom"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGreen" />

        <com.google.android.gms.maps.MapView
...
