...

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_box"
        android:inputType="textPersonName"
        android:background="@color/colorHighlight"
        android:id="@+id/username_input"
        android:textSize="@dimen/main_text"
        android:layout_below="@+id/username_text"
        android:layout_alignStart="@+id/username_text"
        android:layout_alignEnd="@+id/username_text"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
...

        <RadioButton
            android:text="@string/main_mode1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/mode1_button"
            android:textSize="@dimen/main_text" />

        <RadioButton
            android:text="@string/main_mode2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mode2_button"
            android:textSize="@dimen/main_text"
            android:checked="true" />
    </RadioGroup>

    <Button
        android:text="@string/main_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_box"
        android:id="@+id/main_button"
        android:background="@color/colorPrimary"
        android:textSize="20dp"
        android:layout_below="@+id/radioGroup"
...
